--- a/KB/knowledgebase.html
+++ b/KB/knowledgebase.html
@@ -8,7 +8,7 @@
   	<meta name="description" content="Setarit Knowledge base">
   	<meta name="author" content="Setarit">
 
-  	<link rel="stylesheet" href="../css/bootstrap.min.css">
+  	<link rel="stylesheet" href="../css/foundation.css">
   	<link rel="stylesheet" type="text/css" href="../css/custom.css">
   	<link rel="stylesheet" href="../css/jquery-ui.min.css">
   	<link rel="shortcut icon" href="../img/square_flatLogoTest_noSlogan.png">
@@ -24,7 +24,7 @@
 
 	<!-- content -->
 	<div class="row kbList">
-		<div class="col-lg-6 panel">
+		<div class="large-6 columns panel">
 			<h4>For developers</h4>
 			<ul>
 				<li>
@@ -34,22 +34,17 @@
 				</li>
 			</ul>
 		</div>
-  		<div class="col-lg-6 columns panel">
+  		<div class="large-6 columns panel">
   			<h4>Other</h4>
 				<ul>
 					<li>
 						<a href="QuietTicket/QuietTicket-Manager-NL.pdf">
-							<strong>KB-QTI-001</strong> QuietTicket-Manager-NL.pdf - NL (10/10/2016)
+							<strong>KB-QTI-001</strong> QuietTicket-Manager-NL.pdf - NL (31/08/2017)
 						</a>
 					</li>
 				</ul>
   		</div>
 	</div>
-	<footer class="text-center">Copyright &#169; Setarit
-		<script type="text/javascript">
-			var d = new Date();
-			document.write(d.getFullYear());
-		</script></footer>
 	<!-- END content -->
 
 	<!-- Scripts -->
