--- a/index.html
+++ b/index.html
@@ -139,18 +139,24 @@
 						<h2 class="text-center">Contact</h2>
 						<p>You can contact us in various ways:</p>
 						<div class="row">
-							<div class="col-md-4">
+							<div class="col-md-3">
 								<a href="https://twitter.com/intent/tweet?screen_name=Setarit" class="twitter-mention-button" data-size="large" data-dnt="true">Tweet to @Setarit</a>
 								<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 							</div>
-							<div id="GitHub" class="col-md-4">
+							<div id="GitHub" class="col-md-3">
 								<a href="https://github.com/Setarit">
 									<img src="img/GitHub-Mark.png"/>
 									On GitHub
 								</a>
 							</div>
-							<div class="col-md-4">
+							<div class="col-md-3">
 								<div class="fb-like" data-href="http://www.facebook.com/setarit" data-layout="button" data-action="like" data-show-faces="true" data-share="true"></div>
+							</div>
+							<div class="col-md-3">
+								<a id="email">
+									<img src="img/email.png"/>
+									By Mail
+								</a>
 							</div>
 						</div>
 				</section>
@@ -170,5 +176,11 @@
 		<!-- Include all compiled plugins (below), or include individual files as needed -->
 		<script src="js/bootstrap.min.js"></script>
 		<script type="text/javascript" src="js/index.js"></script>
+		<script type="text/javascript">
+		var user = 'info',
+		domain = 'setarit.com',
+		element = document.getElementById('email');
+		element.href = 'mailto:'+user + '@' + domain;
+		</script>
 	</body>
 	</html>
