--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 			<div id="navbar" class="navbar-collapse collapse">
 				<ul class="nav navbar-nav">
 					<li class=""><a href="KB/knowledgebase.html">Knowledge Base</a></li>
-          <li class=""><a href="backup.html">Backup</a></li>
-          <li class=""><a href="https://quietticket.com">QuietTicket</a></li>
+					<li class=""><a href="backup.html">Backup</a></li>
+					<li class=""><a href="https://quietticket.com">QuietTicket</a></li>
 					<li class=""><a href="settler.html">Settler</a></li>
 				</ul>
 			</div><!--/.nav-collapse -->
@@ -77,110 +77,118 @@
 	<div class="container">
 		<!-- backup section -->
 		<section class="cardbox" id="products">
-				<h2 class="text-center">Products</h2>
-				<div class="row">
-					<div class="col-md-2 col-xs-4">
-						<a href="backup.html">
-							<img src="img/backup_combine_v2.png" class="img-responsive" alt="screenshot of the backup application" />
-						</a>
-						<a class="text-center" href="https://play.google.com/store/apps/details?id=com.setarit.backup">
-							<img class="img-responsive" alt="Get it on Google Play" src="img/google-play-badge.png" />
-						</a>
-					</div>
-
-					<div class="col-md-2 col-xs-4">
-						<a class="text-center" href="https://quietticket.com">
-							<img class="img-responsive" alt="QuietTicket" src="img/quietticket.png" />
-						</a>
-						<p class="text-center hidden-xs">Straightforward, flexible and budget friendly online ticket selling</p>
-					</div>
-
-					<div class="col-md-2 col-xs-4">
-						<a class="text-center" href="http://parcks.setarit.com">
-							<img class="img-responsive" alt="Parcks" src="img/parcks.png" />
-						</a>
-						<p class="text-center hidden-xs">A Standardized Packages Installer for GNU/Linux</p>
-					</div>
-				</div>
-			</section>
-			<!-- END backup section -->
-			<br />
-			<!-- Customers section -->
-			<section class="cardbox" id="customers">
-				<div class="row">
-					<h2 class="text-center">Customers</h2>
-					<div class="row small-up-1 medium-up-2 large-up-4">
-						<div class="col-md-2 col-xs-4">
-							<a href="http://www.sportassion.be"><img class="img-responsive" src="img/customers/pajottenland_mtb_school.png" /></a>
-						</div>
-						<div class="col-md-2 col-xs-4">
-							<a href="http://www.sportassion.be"><img class="img-responsive" src="img/customers/sportassion.png" /></a>
-						</div>
-						<div class="col-md-2 col-xs-4">
-							<a href="http://www.devrijebelgen.be"><img class="img-responsive" src="img/customers/dvb.png" /></a>
-						</div>
-						<div class="col-md-2 col-xs-4">
-							<a href="http://www.vub.ac.be/vuborkest/php/index.php"><img class="img-responsive" src="img/customers/vuborkest.png" /></a>
-						</div>
-					</div>
-				</div>
-			</section>
-			<br />
-				<!-- KB section -->
-				<section class="cardbox" id="knowledgebase" style="padding: 0px">
-					<a href="KB/knowledgebase.html">
-						<img src="img/kb.png" alt="Visit our Knowledge Base"/>
+			<h2 class="text-center">Products</h2>
+			<div class="row">
+				<div class="col-md-2 col-xs-4">
+					<a href="backup.html">
+						<img src="img/backup_combine_v2.png" class="img-responsive" alt="screenshot of the backup application" />
 					</a>
-				</section>
-				<!-- END KB section -->
-				<br />
-				<!-- contact section -->
-				<section class="cardbox" id="contact">
-						<h2 class="text-center">Contact</h2>
-						<p>You can contact us in various ways:</p>
-						<div class="row">
-							<div class="col-md-3">
-								<a href="https://twitter.com/intent/tweet?screen_name=Setarit" class="twitter-mention-button" data-size="large" data-dnt="true">Tweet to @Setarit</a>
-								<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
-							</div>
-							<div id="GitHub" class="col-md-3">
-								<a href="https://github.com/Setarit">
-									<img src="img/GitHub-Mark.png"/>
-									On GitHub
-								</a>
-							</div>
-							<div class="col-md-3">
-								<div class="fb-like" data-href="http://www.facebook.com/setarit" data-layout="button" data-action="like" data-show-faces="true" data-share="true"></div>
-							</div>
-							<div class="col-md-3">
-								<a id="email">
-									<img src="img/email.png"/>
-									By Mail
-								</a>
-							</div>
-						</div>
-				</section>
-				<!-- END contact section -->
-				<footer class="text-center">Copyright &#169; Setarit
-					<script type="text/javascript">
-						var d = new Date();
-						document.write(d.getFullYear());
-					</script>
-					- Google Play and the Google Play logo are trademarks of Google Inc.</footer>
+					<a class="text-center" href="https://play.google.com/store/apps/details?id=com.setarit.backup">
+						<img class="img-responsive" alt="Get it on Google Play" src="img/google-play-badge.png" />
+					</a>
+				</div>
+
+				<div class="col-md-2 col-xs-4">
+					<a class="text-center" href="https://quietticket.com">
+						<img class="img-responsive" alt="QuietTicket" src="img/quietticket.png" />
+					</a>
+					<p class="text-center hidden-xs">Straightforward, flexible and budget friendly online ticket selling</p>
+				</div>
+
+				<div class="col-md-2 col-xs-4">
+					<a class="text-center" href="http://parcks.setarit.com">
+						<img class="img-responsive" alt="Parcks" src="img/parcks.png" />
+					</a>
+					<p class="text-center hidden-xs">A Standardized Packages Installer for GNU/Linux</p>
+				</div>
+
+				<div class="col-md-2 col-xs-4">
+					<a class="text-center" href="settler.html">
+						<img class="img-responsive" alt="Settler" src="img/settler.png" />
+					</a>
+					<p class="text-center hidden-xs">Take control of your Office365 tenant</p>
+				</div>
 			</div>
 		</div>
-		<!-- END content -->
-		<!-- Scripts -->
-		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-		<!-- Include all compiled plugins (below), or include individual files as needed -->
-		<script src="js/bootstrap.min.js"></script>
-		<script type="text/javascript" src="js/index.js"></script>
+	</section>
+	<!-- END backup section -->
+	<br />
+	<!-- Customers section -->
+	<section class="cardbox" id="customers">
+		<div class="row">
+			<h2 class="text-center">Customers</h2>
+			<div class="row small-up-1 medium-up-2 large-up-4">
+				<div class="col-md-2 col-xs-4">
+					<a href="http://www.sportassion.be"><img class="img-responsive" src="img/customers/pajottenland_mtb_school.png" /></a>
+				</div>
+				<div class="col-md-2 col-xs-4">
+					<a href="http://www.sportassion.be"><img class="img-responsive" src="img/customers/sportassion.png" /></a>
+				</div>
+				<div class="col-md-2 col-xs-4">
+					<a href="http://www.devrijebelgen.be"><img class="img-responsive" src="img/customers/dvb.png" /></a>
+				</div>
+				<div class="col-md-2 col-xs-4">
+					<a href="http://www.vub.ac.be/vuborkest/php/index.php"><img class="img-responsive" src="img/customers/vuborkest.png" /></a>
+				</div>
+			</div>
+		</div>
+	</section>
+	<br />
+	<!-- KB section -->
+	<section class="cardbox" id="knowledgebase" style="padding: 0px">
+		<a href="KB/knowledgebase.html">
+			<img src="img/kb.png" alt="Visit our Knowledge Base"/>
+		</a>
+	</section>
+	<!-- END KB section -->
+	<br />
+	<!-- contact section -->
+	<section class="cardbox" id="contact">
+		<h2 class="text-center">Contact</h2>
+		<p>You can contact us in various ways:</p>
+		<div class="row">
+			<div class="col-md-3">
+				<a href="https://twitter.com/intent/tweet?screen_name=Setarit" class="twitter-mention-button" data-size="large" data-dnt="true">Tweet to @Setarit</a>
+				<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+			</div>
+			<div id="GitHub" class="col-md-3">
+				<a href="https://github.com/Setarit">
+					<img src="img/GitHub-Mark.png"/>
+					On GitHub
+				</a>
+			</div>
+			<div class="col-md-3">
+				<div class="fb-like" data-href="http://www.facebook.com/setarit" data-layout="button" data-action="like" data-show-faces="true" data-share="true"></div>
+			</div>
+			<div class="col-md-3">
+				<a id="email">
+					<img src="img/email.png"/>
+					By Mail
+				</a>
+			</div>
+		</div>
+	</section>
+	<!-- END contact section -->
+	<footer class="text-center">Copyright &#169; Setarit
 		<script type="text/javascript">
-		var user = 'info',
-		domain = 'setarit.com',
-		element = document.getElementById('email');
-		element.href = 'mailto:'+user + '@' + domain;
+		var d = new Date();
+		document.write(d.getFullYear());
 		</script>
-	</body>
-	</html>
+		- Google Play and the Google Play logo are trademarks of Google Inc.</footer>
+	</div>
+</div>
+<!-- END content -->
+<!-- Scripts -->
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<!-- Include all compiled plugins (below), or include individual files as needed -->
+<script src="js/bootstrap.min.js"></script>
+<script type="text/javascript" src="js/index.js"></script>
+<script type="text/javascript">
+var user = 'info',
+domain = 'setarit.com',
+element = document.getElementById('email');
+element.href = 'mailto:'+user + '@' + domain;
+</script>
+</body>
+</html>
